add board approval in ESOP guide

--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -28,20 +28,22 @@ images:
 
 4. Contact one of the partnering law firms to answer any remaining questions about your specific needs.
 
-5. When all is set, to give the first grant to an employee:
+5. Get your board's approval.
+
+6. When all is set, to give the first grant to an employee:
     * Decide the amount to give and adjust the allocation at the end of the contract accordingly.
     * Let the employee sign participation plan agreement.
 
 <Img src="employee-participation.png" align="right" size="300"/>
 
-6. To track your pool and vesting schedules on Ledgy:
+7. To track your pool and vesting schedules on Ledgy:
     * Head to the transaction page (free) or incentives page (premium) and create an ESOP or PSOP pool.
     * Add option or phantom option transactions from the pool to your employees (premium).
     * In the first transaction define the vesting schedule from the contract. You can then use it as preset in all the following transactions.
     * Commit the new option grants. This enables email notifications for important vesting events like the cliff end, and your employees can see their grants in their personal portfolio.
     * Invite your employees to give them access to their portfolio.
 
-7. Congrats, you’re all set!
+8. Congrats, you’re all set!
 
 
 <Img src="lexr.png" size="50" align="right" />
