--- a/src/markdown/blog/GV-ch.mdx
+++ b/src/markdown/blog/GV-ch.mdx
@@ -2,7 +2,7 @@
 date: "2019-06-24"
 author: "yoko"
 title: "Startup-GV in der Schweiz"
-description: "Wir haben letzte Woche die allererste Generalversammlung bei Ledgy durchgeführt. In diesem Post, teilen wir unsere Templates sowie unsere Learnings."
+description: "Wir haben letzte Woche die allererste Generalversammlung bei Ledgy durchgeführt. In diesem Post teilen wir unsere Templates sowie unsere Learnings."
 coverImage: GV-ch/GV-cover.jpg
 ---
 
@@ -10,15 +10,15 @@ Wir haben letzte Woche die allererste Generalversammlung bei Ledgy durchgeführt
 hier ist was wir gelernt haben, sowie unsere Templates, die wir zur Verfügung stellen:
 
 
-1. Bei den meisten early stage startups dauert es ca. 5min!
-2. **20 Tage** im voraus ist die Deadline um die Einladung an den Aktionären zu schicken. Dies kann per Email verschickt werden, falls es so in den Statuten spezifiziert ist.
-3. Bevor man die Einladung schickt, muss man den Jahresabschluss fertig haben.
-4. Eine Einladung an den Aktionäre enthält:
+1. Bei early stage startups dauert es ca. 5min!
+2. **20 Tage** im Voraus ist die Deadline um die Einladung an die Aktionäre zu verschicken. Das kann per Email getan werden, sofern in den Statuten so festgelegt.
+3. Bevor man die Einladung schickt, muss man den Jahresabschluss fertig haben. 
+4. Eine Einladung an die Aktionäre enthält:
     * [Die Traktanden](https://drive.google.com/drive/folders/1e3TPL5Gp9dJTwrsg5DNFIeo7k9mboe3-)
     * Den Jahresabschluss
     * [Die Vollmachtsabtretung](https://drive.google.com/drive/folders/1e3TPL5Gp9dJTwrsg5DNFIeo7k9mboe3-) für die Aktionäre, die an der GV nicht teilnehmen können.
 
-Falls ihr fragen habt, meldet euch jederzeit bei **contact@ledgy.com**.
+Falls du Fragen hast, melde dich jederzeit bei **contact@ledgy.com**.
 <br/>
 
-_***Danke*** an Elena Walder von [smartuplaw](https://www.smartuplaw.ch), die diesen Blogpost überprüft hat!_
+_***Danke*** an Elena Walder-Schiavone von [smartuplaw](https://www.smartuplaw.ch), die diesen Blogpost rechtlich geprüft hat._
