updated template links

--- a/src/markdown/blog/GV-ch.mdx
+++ b/src/markdown/blog/GV-ch.mdx
@@ -14,9 +14,9 @@ hier ist was wir gelernt haben, sowie unsere Templates, die wir zur Verfügung s
 2. **20 Tage** im Voraus ist die Deadline um die Einladung an die Aktionäre zu verschicken. Das kann per Email getan werden, sofern in den Statuten so festgelegt.
 3. Bevor man die Einladung schickt, muss man den Jahresabschluss fertig haben. 
 4. Eine Einladung an die Aktionäre enthält:
-    * [Die Traktanden](https://drive.google.com/drive/folders/1e3TPL5Gp9dJTwrsg5DNFIeo7k9mboe3-)
+    * [Die Traktanden](https://docs.google.com/document/d/1KKhzYvQEJ-u8n5OIoszwzrrG5QuHQ58I/)
     * Den Jahresabschluss
-    * [Die Vollmachtsabtretung](https://drive.google.com/drive/folders/1e3TPL5Gp9dJTwrsg5DNFIeo7k9mboe3-) für die Aktionäre, die an der GV nicht teilnehmen können.
+    * [Die Vollmachtsabtretung](https://docs.google.com/document/d/1iP5t4g2Hb848_iXQfW-3vjXNS0rzc99B/) für die Aktionäre, die an der GV nicht teilnehmen können.
 
 Falls du Fragen hast, melde dich jederzeit bei **contact@ledgy.com**.
 <br/>
