Corrections after Elena's review

--- a/src/markdown/blog/GV-ch.mdx
+++ b/src/markdown/blog/GV-ch.mdx
@@ -6,17 +6,17 @@ description: "Wir haben letzte Woche die allererste Generalversammlung bei Ledgy
 coverImage: GV-ch/GV-cover.jpg
 ---
 
-Wir haben letzte Woche die allererste Generalversammlung bei Ledgy durchgeführt, 
+Wir haben letzte Woche die allererste Generalversammlung bei Ledgy durchgeführt,
 hier ist was wir gelernt haben, sowie unsere Templates, die wir zur Verfügung stellen:
 
 
 1. Bei early stage startups dauert es ca. 5min!
 2. **20 Tage** im Voraus ist die Deadline um die Einladung an die Aktionäre zu verschicken. Das kann per Email getan werden, sofern in den Statuten so festgelegt.
-3. Bevor man die Einladung schickt, muss man den Jahresabschluss fertig haben. 
+3. Bevor man die Einladung schickt, muss man den Jahresabschluss fertig haben.
 4. Eine Einladung an die Aktionäre enthält:
-    * [Die Traktanden](https://docs.google.com/document/d/1KKhzYvQEJ-u8n5OIoszwzrrG5QuHQ58I/)
+    * [Die Traktanden](https://docs.google.com/document/d/1KKhzYvQEJ-u8n5OIoszwzrrG5QuHQ58I/), inklusive Anträge des Verwaltungrates.
     * Den Jahresabschluss
-    * [Die Vollmachtsabtretung](https://docs.google.com/document/d/1iP5t4g2Hb848_iXQfW-3vjXNS0rzc99B/) für die Aktionäre, die an der GV nicht teilnehmen können.
+    * [Die Vollmacht](https://docs.google.com/document/d/1iP5t4g2Hb848_iXQfW-3vjXNS0rzc99B/) für die Aktionäre, die an der GV nicht teilnehmen können.
 
 Falls du Fragen hast, melde dich jederzeit bei **contact@ledgy.com**.
 <br/>
