--- a/src/markdown/blog/GV-ch.mdx
+++ b/src/markdown/blog/GV-ch.mdx
@@ -1,7 +1,7 @@
 ---
 date: "2019-06-24"
 author: "yoko"
-title: "Startup-GV in der Schweiz"
+title: "Die 5-Minuten-Startup-GV in der Schweiz"
 description: "Wir haben letzte Woche die allererste Generalversammlung bei Ledgy durchgeführt. In diesem Post teilen wir unsere Templates sowie unsere Learnings."
 coverImage: GV-ch/GV-cover.jpg
 ---
