--- a/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
+++ b/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
@@ -3,7 +3,7 @@ date: "2019-06-24"
 author: "yoko"
 title: "Die 5-Minuten-Startup-GV in der Schweiz"
 description: "Wir haben letzte Woche die allererste Generalversammlung bei Ledgy durchgeführt. In diesem Post teilen wir unsere Templates sowie unsere Learnings."
-coverImage: GV-ch/GV-cover.jpg
+coverImage: 5-minuten-startup-GV-in-der-schweiz/GV-cover.jpg
 ---
 
 Wir haben letzte Woche die allererste Generalversammlung bei Ledgy durchgeführt,
