add language support in markdown

--- a/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
+++ b/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
@@ -2,6 +2,7 @@
 date: "2019-06-24"
 author: "yoko"
 title: "Die 5-Minuten-Startup-GV in der Schweiz"
+language: "de"
 description: "Wir haben letzte Woche die allererste Generalversammlung bei Ledgy durchgeführt. In diesem Post teilen wir unsere Templates sowie unsere Learnings."
 coverImage: 5-minuten-startup-GV-in-der-schweiz/GV-cover.jpg
 ---
